# Moolah-IQ---Financial-Intelligence-Platform

./: .env.example  .gitignore  .vercelignore  PIPELINE_README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/blog/: BlogClient.tsx  page.tsx
app/tools/: page.tsx
components/: CardIllustration.tsx  CategoryFilter.tsx  CompoundInterestCalculator.tsx  CrossoverCalculator.tsx  CrossoverPreview.tsx  Footer.tsx  Header.tsx  Hero.tsx  HomeTabs.tsx  IntelligenceBrief.tsx  MoneyIQQuiz.tsx  MortgageRefinanceCalculator.tsx  Newsletter.tsx  PostCard.tsx  PrintButton.tsx  ScrollProgress.tsx  SearchBar.tsx  StartHere.tsx  TableOfContents.tsx  Videos.tsx
components/blog/: ArticleCard.tsx  BlogScope.tsx  CardIllustration.tsx  FeaturedHero.tsx  HeroChart.tsx
config/: agent_prompts.yaml  n8n_workflow.json  qc_checks.yaml  settings.yaml  topics_queue.yaml
content/posts/: best-high-yield-savings-accounts-2026.md  getting-started-with-budgeting.md  investing-101.md  micro-automation-side-hustle-5-systems.md  missed-call-text-back-service.md  size-your-first-investments.md  vet-online-income-opportunity.md
data/: war_stories.json
lib/: categories.ts  iq.ts  leadMagnets.ts  posts.ts  search.ts  social.ts
lib/blog/: adaptPost.ts  theme.ts  types.ts
scripts/: dry_run.py  import_n8n_workflow.py  setup_check.py  start_api.py  start_servers.py  test_content_agent.py
src/: __init__.py  api.py  orchestrator.py  state.py
src/agents/: __init__.py  (+15 more)
tests/: test_state.py
(+19 files in other folders)
